--- a/Anzeige.html
+++ b/Anzeige.html
@@ -31,171 +31,173 @@
 
 </head>
 <body ng-controller="ramcontroller">
-<!--Begin der Navbar-->
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand">PIC Simulator 16F84</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <!--Linke Seite der Navbar-->
-            <ul class="nav navbar-nav">
-               <li ng-controller="CPU">
-                   <form class="navbar-form navbar-left" role="search" >
-                       <button type="submit" class="btn btn-default" ng-click="callOperation('3E6F')">Start</button>
-                       <button type="submit" class="btn btn-default">Ein Schritt</button>
-                       <button type="submit" class="btn btn-default">Stop</button>
-                       <button type="submit" class="btn btn-default">Reset</button>
-                   </form>
-               </li>
-            </ul>
-            <!--Rechte Seite der Navbar-->
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Hilfe</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav><!--Ende der Navbar-->
-
-<div ng-controller="Befehlsspeichercontroller">
-        <!--Einlesen des Programmcodes-->
-        <div class="codeanzeige" ng-controller="UploadCtrl">
-            <div class="fileUpload btn btn-primary">
-                <span>Upload</span>
-                <input id="uploadBtn" input type="file" on-read-file="showContent($fileContent)" class="upload" />
+    <!--Begin der Navbar-->
+    <div ng-controller="CPU">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">PIC Simulator 16F84</a>
             </div>
-            <!--Anzeige des Dateinamens der Hochgeladenen Datei-->
-            <input id="uploadFile" placeholder="Datei auswählen" disabled="disabled" on-read-file="showContent($fileContent)"/>
-        <!--Ausgabe des Programmcodes-->
-        <div ng-if="content">
-            <h2>Programmcode</h2>
-               <pre class=".pre-scrollable">
-                   <!--Schleife für die Zeilenweise Ausgabe des Dateiinhalts-->
-                   <p ng-repeat="line in content">{{line}}</p>
-               </pre>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <!--Linke Seite der Navbar-->
+                <ul class="nav navbar-nav">
+                   <li >
+                       <form class="navbar-form navbar-left" role="search" >
+                           <button type="submit" class="btn btn-default" ng-click="callOperation('3E6F')">Start</button>
+                           <button type="submit" class="btn btn-default">Ein Schritt</button>
+                           <button type="submit" class="btn btn-default">Stop</button>
+                           <button type="submit" class="btn btn-default">Reset</button>
+                       </form>
+                   </li>
+                </ul>
+                <!--Rechte Seite der Navbar-->
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Hilfe</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav><!--Ende der Navbar-->
+
+    <div ng-controller="Befehlsspeichercontroller">
+            <!--Einlesen des Programmcodes-->
+            <div class="codeanzeige" ng-controller="UploadCtrl">
+                <div class="fileUpload btn btn-primary">
+                    <span>Upload</span>
+                    <input id="uploadBtn" input type="file" on-read-file="showContent($fileContent)" class="upload" />
+                </div>
+                <!--Anzeige des Dateinamens der Hochgeladenen Datei-->
+                <input id="uploadFile" placeholder="Datei auswählen" disabled="disabled" on-read-file="showContent($fileContent)"/>
+            <!--Ausgabe des Programmcodes-->
+            <div ng-if="content">
+                <h2>Programmcode</h2>
+                   <pre class=".pre-scrollable">
+                       <!--Schleife für die Zeilenweise Ausgabe des Dateiinhalts-->
+                       <p ng-repeat="line in content">{{line}}</p>
+                   </pre>
+            </div>
+            </div>
+
+
+        <div class="buttons">
+            <!--Dropdownmenü Taktauswahl-->
+            <select id="Taktauswahl" class="selectpicker" ng-controller="DropdownCtrl" >
+                <option value="0.032767">32,767 kHz</option>
+                <option value="0.5">500 kHz</option>
+                <option value="1">1 MHz</option>
+                <option value="2" selected="selected">2 MHz</option>
+                <option value="4">4 MHz</option>
+                <option value="8">8 MHz</option>
+                <option value="16">16 MHz</option>
+                <option value="20">20 MHz</option>
+                <option value="32">32 MHz</option>
+            </select>
+            <!--Anzeige Laufzeitzähler-->
+            <label>Laufzeitzähler: {{Laufzeit}}</label>
         </div>
+
+
+
+             <div ng-if="content" class="ram">
+                 <!--Anzeige der Special Function Registers-->
+                <h2>SFR</h2>
+                <table ng-if="ram" align="left" class="table table-striped">
+                    <tr>
+                        <td>Indirect_addr</td> <td>{{Indirect_addr}}</td>
+                        <td>{{Indirect_addr}}</td> <td>Indirect_addr</td>
+                    </tr>
+                    <tr>
+                        <td>TMR0</td> <td>{{TMR0}}</td>
+                        <td>{{OPTION_REG}}</td> <td>OPTION_REG</td>
+                    </tr>
+                    <tr>
+                        <td>PCL</td> <td>{{PCL}}</td>
+                        <td>{{PCL}}</td> <td>PCL</td>
+                    </tr>
+                    <tr>
+                        <td>STATUS</td> <td>{{STATUS}}</td>
+                        <td>{{STATUS}}</td> <td>STATUS</td>
+                    </tr>
+                    <tr>
+                        <td>FSR</td> <td>{{FSR}}</td>
+                        <td>{{FSR}}</td> <td>FSR</td>
+                    </tr>
+                    <tr>
+                        <td>PORTA</td> <td>{{PORTA}}</td>
+                        <td>{{TRISA}}</td> <td>TRISA</td>
+                    </tr>
+                    <tr>
+                        <td>PORTB</td> <td>{{PORTB}}</td>
+                        <td>{{TRISB}}</td> <td>TRISB</td>
+                    </tr>
+                    <tr>
+                        <td>EEDATA</td>	<td>{{EEDATA}}</td>
+                        <td>{{EECON1}}</td>	<td>EECON1</td>
+                    </tr>
+                    <tr>
+                        <td>EEADR</td>	<td>{{EEADR}}</td>
+                        <td>{{EECON2}}</td>	<td>EECON2</td>
+                    </tr>
+                    <tr>
+                        <td>PCLATH</td>	<td>{{PCLATH}}</td>
+                        <td>{{PCLATH}}</td>	<td>PCLATH</td>
+                    </tr>
+                    <tr>
+                        <td>INTCON</td>	<td>{{INTCON}}</td>
+                        <td>{{INTCON}}</td>	<td>INTCON</td>
+                    </tr>
+                </table>
+
+             </div>
+        <div ng-if="content" class="ram">
+            <!--Anzeige der General Purpose Registers-->
+            <h2>GPR</h2>
+                <table ng-if="ram" class="table table-striped">
+                    <tr>
+                        <td>{{ram[0]}}</td>	 <td>{{ram[1]}}</td>  <td>{{ram[2]}}</td>  <td>{{ram[3]}}</td>  <td>{{ram[4]}}</td>	 <td>{{ram[5]}}</td>  <td>{{ram[6]}}</td>  <td>{{ram[7]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[8]}}</td>  <td>{{ram[9]}}</td>  <td>{{ram[10]}}</td> <td>{{ram[11]}}</td> <td>{{ram[12]}}</td> <td>{{ram[13]}}</td> <td>{{ram[14]}}</td> <td>{{ram[15]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[16]}}</td> <td>{{ram[17]}}</td> <td>{{ram[18]}}</td> <td>{{ram[19]}}</td>	<td>{{ram[20]}}</td> <td>{{ram[21]}}</td> <td>{{ram[22]}}</td> <td>{{ram[23]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[24]}}</td> <td>{{ram[25]}}</td> <td>{{ram[26]}}</td> <td>{{ram[27]}}</td>	<td>{{ram[28]}}</td> <td>{{ram[29]}}</td> <td>{{ram[30]}}</td> <td>{{ram[31]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[32]}}</td> <td>{{ram[33]}}</td> <td>{{ram[34]}}</td> <td>{{ram[35]}}</td>	<td>{{ram[36]}}</td> <td>{{ram[37]}}</td> <td>{{ram[38]}}</td> <td>{{ram[39]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[40]}}</td> <td>{{ram[41]}}</td> <td>{{ram[42]}}</td> <td>{{ram[43]}}</td>	<td>{{ram[44]}}</td> <td>{{ram[45]}}</td> <td>{{ram[46]}}</td> <td>{{ram[47]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[48]}}</td> <td>{{ram[49]}}</td> <td>{{ram[50]}}</td> <td>{{ram[51]}}</td>	<td>{{ram[52]}}</td> <td>{{ram[53]}}</td> <td>{{ram[54]}}</td> <td>{{ram[55]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[56]}}</td> <td>{{ram[57]}}</td> <td>{{ram[58]}}</td> <td>{{ram[59]}}</td>	<td>{{ram[60]}}</td> <td>{{ram[61]}}</td> <td>{{ram[62]}}</td> <td>{{ram[63]}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ram[64]}}</td> <td>{{ram[65]}}</td> <td>{{ram[66]}}</td> <td>{{ram[67]}}</td>
+                    </tr>
+                </table>
+            </div>
+
+    <!--Zusätzliche Labels für verschiedene Anzeigen-->
+
+
         </div>
-
-
-    <div class="buttons">
-        <!--Dropdownmenü Taktauswahl-->
-        <select id="Taktauswahl" class="selectpicker" ng-controller="DropdownCtrl" >
-            <option value="0.032767">32,767 kHz</option>
-            <option value="0.5">500 kHz</option>
-            <option value="1">1 MHz</option>
-            <option value="2" selected="selected">2 MHz</option>
-            <option value="4">4 MHz</option>
-            <option value="8">8 MHz</option>
-            <option value="16">16 MHz</option>
-            <option value="20">20 MHz</option>
-            <option value="32">32 MHz</option>
-        </select>
-        <!--Anzeige Laufzeitzähler-->
-        <label>Laufzeitzähler: {{Laufzeit}}</label>
-    </div>
-
-
-
-         <div ng-if="content" class="ram">
-             <!--Anzeige der Special Function Registers-->
-            <h2>SFR</h2>
-            <table ng-if="ram" align="left" class="table table-striped">
-                <tr>
-                    <td>Indirect_addr</td> <td>{{Indirect_addr}}</td>
-                    <td>{{Indirect_addr}}</td> <td>Indirect_addr</td>
-                </tr>
-                <tr>
-                    <td>TMR0</td> <td>{{TMR0}}</td>
-                    <td>{{OPTION_REG}}</td> <td>OPTION_REG</td>
-                </tr>
-                <tr>
-                    <td>PCL</td> <td>{{PCL}}</td>
-                    <td>{{PCL}}</td> <td>PCL</td>
-                </tr>
-                <tr>
-                    <td>STATUS</td> <td>{{STATUS}}</td>
-                    <td>{{STATUS}}</td> <td>STATUS</td>
-                </tr>
-                <tr>
-                    <td>FSR</td> <td>{{FSR}}</td>
-                    <td>{{FSR}}</td> <td>FSR</td>
-                </tr>
-                <tr>
-                    <td>PORTA</td> <td>{{PORTA}}</td>
-                    <td>{{TRISA}}</td> <td>TRISA</td>
-                </tr>
-                <tr>
-                    <td>PORTB</td> <td>{{PORTB}}</td>
-                    <td>{{TRISB}}</td> <td>TRISB</td>
-                </tr>
-                <tr>
-                    <td>EEDATA</td>	<td>{{EEDATA}}</td>
-                    <td>{{EECON1}}</td>	<td>EECON1</td>
-                </tr>
-                <tr>
-                    <td>EEADR</td>	<td>{{EEADR}}</td>
-                    <td>{{EECON2}}</td>	<td>EECON2</td>
-                </tr>
-                <tr>
-                    <td>PCLATH</td>	<td>{{PCLATH}}</td>
-                    <td>{{PCLATH}}</td>	<td>PCLATH</td>
-                </tr>
-                <tr>
-                    <td>INTCON</td>	<td>{{INTCON}}</td>
-                    <td>{{INTCON}}</td>	<td>INTCON</td>
-                </tr>
-            </table>
-         </div>
-    <div ng-if="content" class="ram">
-        <!--Anzeige der General Purpose Registers-->
-        <h2>GPR</h2>
-            <table ng-if="ram" class="table table-striped">
-                <tr>
-                    <td>{{ram[0]}}</td>	 <td>{{ram[1]}}</td>  <td>{{ram[2]}}</td>  <td>{{ram[3]}}</td>  <td>{{ram[4]}}</td>	 <td>{{ram[5]}}</td>  <td>{{ram[6]}}</td>  <td>{{ram[7]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[8]}}</td>  <td>{{ram[9]}}</td>  <td>{{ram[10]}}</td> <td>{{ram[11]}}</td> <td>{{ram[12]}}</td> <td>{{ram[13]}}</td> <td>{{ram[14]}}</td> <td>{{ram[15]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[16]}}</td> <td>{{ram[17]}}</td> <td>{{ram[18]}}</td> <td>{{ram[19]}}</td>	<td>{{ram[20]}}</td> <td>{{ram[21]}}</td> <td>{{ram[22]}}</td> <td>{{ram[23]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[24]}}</td> <td>{{ram[25]}}</td> <td>{{ram[26]}}</td> <td>{{ram[27]}}</td>	<td>{{ram[28]}}</td> <td>{{ram[29]}}</td> <td>{{ram[30]}}</td> <td>{{ram[31]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[32]}}</td> <td>{{ram[33]}}</td> <td>{{ram[34]}}</td> <td>{{ram[35]}}</td>	<td>{{ram[36]}}</td> <td>{{ram[37]}}</td> <td>{{ram[38]}}</td> <td>{{ram[39]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[40]}}</td> <td>{{ram[41]}}</td> <td>{{ram[42]}}</td> <td>{{ram[43]}}</td>	<td>{{ram[44]}}</td> <td>{{ram[45]}}</td> <td>{{ram[46]}}</td> <td>{{ram[47]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[48]}}</td> <td>{{ram[49]}}</td> <td>{{ram[50]}}</td> <td>{{ram[51]}}</td>	<td>{{ram[52]}}</td> <td>{{ram[53]}}</td> <td>{{ram[54]}}</td> <td>{{ram[55]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[56]}}</td> <td>{{ram[57]}}</td> <td>{{ram[58]}}</td> <td>{{ram[59]}}</td>	<td>{{ram[60]}}</td> <td>{{ram[61]}}</td> <td>{{ram[62]}}</td> <td>{{ram[63]}}</td>
-                </tr>
-                <tr>
-                    <td>{{ram[64]}}</td> <td>{{ram[65]}}</td> <td>{{ram[66]}}</td> <td>{{ram[67]}}</td>
-                </tr>
-            </table>
-        </div>
-    </div>
-<!--Zusätzliche Labels für verschiedene Anzeigen-->
-    <div ng-controller="CPU" class="cpu">
-        <button ng-click="callOperation('3E6F')">test</button>
         <label>DigitalCarry:{{digitalCarry}}</label>
         <label>ZeroFlag:{{zeroFlag}}</label>
         <label>CarryFlag:{{carry}}</label>
     </div>
-
 </body>
 </html>
