--- a/Anzeige.html
+++ b/Anzeige.html
@@ -34,7 +34,7 @@
     <!--Begin der Navbar-->
     <div ng-controller="CPU">
     <nav class="navbar navbar-default">
-        <div class="container-fluid">
+        <div class="container-fluid" ng-controller="Zeit">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -50,10 +50,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <!--Linke Seite der Navbar-->
                 <ul class="nav navbar-nav">
-                   <li >
+                   <li>
                        <form class="navbar-form navbar-left" role="search" >
                            <button type="submit" class="btn btn-default" ng-click="callOperation('3E6F')">Start</button>
-                           <button type="submit" class="btn btn-default">Ein Schritt</button>
+                           <button type="submit" class="btn btn-default" ng-click="ausgabe()">Ein Schritt</button>
                            <button type="submit" class="btn btn-default">Stop</button>
                            <button type="submit" class="btn btn-default">Reset</button>
                        </form>
@@ -89,7 +89,7 @@
 
         <div class="buttons">
             <!--Dropdownmenü Taktauswahl-->
-            <select id="Taktauswahl" class="selectpicker" ng-controller="DropdownCtrl" >
+            <select id="Taktauswahl" class="selectpicker" ng-controller="DropdownCtrl" ng-model="$scope.Takt">
                 <option value="0.032767">32,767 kHz</option>
                 <option value="0.5">500 kHz</option>
                 <option value="1">1 MHz</option>
@@ -192,9 +192,7 @@
             </div>
 
     <!--Zusätzliche Labels für verschiedene Anzeigen-->
-
-
-        </div>
+    </div>
         <label>DigitalCarry:{{digitalCarry}}</label>
         <label>ZeroFlag:{{zeroFlag}}</label>
         <label>CarryFlag:{{carry}}</label>
