--- a/Anzeige.html
+++ b/Anzeige.html
@@ -34,7 +34,7 @@
     <!--Begin der Navbar-->
     <div ng-controller="CPU">
     <nav class="navbar navbar-default">
-        <div class="container-fluid" ng-controller="Zeit">
+        <div class="container-fluid" ng-controller="Counter">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -53,7 +53,7 @@
                    <li>
                        <form class="navbar-form navbar-left" role="search" >
                            <button type="submit" class="btn btn-default" ng-click="callOperation('3E6F')">Start</button>
-                           <button type="submit" class="btn btn-default" ng-click="ausgabe()">Ein Schritt</button>
+                           <button type="submit" class="btn btn-default" ng-click="Zeit(2)">Ein Schritt</button>
                            <button type="submit" class="btn btn-default">Stop</button>
                            <button type="submit" class="btn btn-default">Reset</button>
                        </form>
