--- a/Anzeige.html
+++ b/Anzeige.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="scripts/CounterCtrl.js"></script>
     <script type="text/javascript" src="scripts/DarstellungCtrl.js"></script>
     <script type="text/javascript" src="scripts/AblaufsCtrl.js"></script>
+    <script type="text/javascript" src="scripts/DataFactory.js"></script>
     <!--Eigene CSS-Datei zur Anordnung-->
     <link rel="stylesheet" href="PicSimu.css">
     <!--Einbinden von Bootstrap-select-CSS für die Taktauswahl-->
@@ -55,7 +56,7 @@
                            <li>
                                <form class="navbar-form navbar-left" role="search" >
                                    <button type="submit" class="btn btn-default" ng-disable="content" ng-click="Startapp()">Start</button>
-                                   <button type="submit" class="btn btn-default" ng-click="Zeit(2)">Ein Schritt</button>
+                                   <button type="submit" class="btn btn-default" ng-click="oneStep()">Ein Schritt</button>
                                    <button type="submit" class="btn btn-default" ng-click="stoppapp()">Stop</button>
                                    <button type="submit" class="btn btn-default" ng-click="reset()">Reset</button>
                                </form>
@@ -200,6 +201,8 @@
             <label>ZeroFlag:{{zeroFlag}}</label>
             <label>CarryFlag:{{carry}}</label>
             <label>Instructions:{{Instructioncounter}}</label>
+            <br>
+            <label>W_Register:{{w_reg}}</label>
         </div>
     </div>
     </div>
