--- a/Anzeige.html
+++ b/Anzeige.html
@@ -55,10 +55,10 @@
                         <ul class="nav navbar-nav">
                            <li>
                                <form class="navbar-form navbar-left" role="search" >
-                                   <button type="submit" class="btn btn-default" ng-disable="content" ng-click="Startapp()">Start</button>
-                                   <button type="submit" class="btn btn-default" ng-click="oneStep()">Ein Schritt</button>
-                                   <button type="submit" class="btn btn-default" ng-click="stoppapp()">Stop</button>
-                                   <button type="submit" class="btn btn-default" ng-click="reset()">Reset</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="Startapp()">Start</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStep()">Ein Schritt</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="stoppapp()">Stop</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="reset()">Reset</button>
                                </form>
                            </li>
                         </ul>
