--- a/Anzeige.html
+++ b/Anzeige.html
@@ -50,7 +50,7 @@
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="Counter">
                         <!--Linke Seite der Navbar-->
                         <ul class="nav navbar-nav">
                            <li>
@@ -60,6 +60,7 @@
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStep()">Ein Schritt</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="stoppapp()">Stop</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="reset()">Reset</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="Zeit(2)">Test</button>
                                </form>
                            </li>
                         </ul>
