step back angefangen

--- a/Anzeige.html
+++ b/Anzeige.html
@@ -56,7 +56,7 @@
                            <li>
                                <form class="navbar-form navbar-left" role="search" >
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="Startapp()">Start</button>
-                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="">Ein Schritt zurück</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStepBack()">Ein Schritt zurück</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStep()">Ein Schritt</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="stoppapp()">Stop</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="reset()">Reset</button>
