--- a/Anzeige.html
+++ b/Anzeige.html
@@ -21,7 +21,6 @@
     <script type="text/javascript" src="scripts/BefehlsspeicherCtrl.js"></script>
     <script type="text/javascript" src="scripts/CpuCtrl.js"></script>
     <script type="text/javascript" src="scripts/RamCtrl.js"></script>
-    <script type="text/javascript" src="scripts/CounterCtrl.js"></script>
     <script type="text/javascript" src="scripts/DarstellungCtrl.js"></script>
     <script type="text/javascript" src="scripts/AblaufsCtrl.js"></script>
     <!--Eigene CSS-Datei zur Anordnung-->
@@ -60,7 +59,7 @@
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStep()">Ein Schritt</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="stoppapp()">Stop</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="reset()">Reset</button>
-                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="Zeit(2)">Test</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="">Test</button>
                                </form>
                            </li>
                         </ul>
