--- a/Anzeige.html
+++ b/Anzeige.html
@@ -36,7 +36,7 @@
         <!--Begin der Navbar-->
         <div ng-controller="AblaufsCtrl">
             <nav class="navbar navbar-default">
-                <div class="container-fluid" ng-controller="Counter">
+                <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -49,7 +49,7 @@
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="Counter">
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                         <!--Linke Seite der Navbar-->
                         <ul class="nav navbar-nav">
                            <li>
@@ -59,7 +59,7 @@
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="oneStep()">Ein Schritt</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="stoppapp()">Stop</button>
                                    <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="reset()">Reset</button>
-                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="">Test</button>
+                                   <button type="submit" class="btn btn-default" ng-disabled="!content" ng-click="Zeit(2)">Test</button>
                                </form>
                            </li>
                         </ul>
@@ -92,7 +92,7 @@
 
 
                 <div class="buttons" ng-controller="DropdownCtrl">
-                    <div ng-controller="Counter">
+                    <div>
                         <select id="Taktauswahl" class="selectpicker"  ng-model="selectedItem" ng-options="item.name for item in items" ng-change="changetakt()"></select>
                         <!--Anzeige Laufzeitzähler-->
                         <label>{{selectedItem.Takt}}</label>
